@@ -339,7 +339,7 @@ int handle_gdb_valgrind_command (char *mon, OutputSink *sink_wanted_at_return)
                do not, suggest a 'likely somewhat working' address: */
             const Addr tool_text_start
                = tooldi ?
-               VG_(DebugInfo_get_text_avma) (tooldi) : 0x38000000;
+               VG_(DebugInfo_get_text_avma) (tooldi) : 0x58000000;
             const NSegment *toolseg
                = tooldi ?
                  VG_(am_find_nsegment) (VG_(DebugInfo_get_text_avma) (tooldi))
